@@ -20,10 +20,10 @@
 #include "gendefs.h"
 #include "suffix.h"
 
-int HSM2delete(inModel,name,inInst)
-     GENmodel *inModel;
-     IFuid name;
-     GENinstance **inInst;
+int HSM2delete(
+     GENmodel *inModel,
+     IFuid name,
+     GENinstance **inInst)
 {
   HSM2instance **fast = (HSM2instance**)inInst;
   HSM2model *model = (HSM2model*)inModel;
